--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
+version: '3.8'
+
 services:
-  sqlserver:
-    image: mcr.microsoft.com/azure-sql-edge:latest
+  postgres:
+    image: postgres:14
     environment:
-      - ACCEPT_EULA=Y
-      - SA_PASSWORD=Strong@Password1
+      - POSTGRES_DB=tropical-express
+      - POSTGRES_USER=josill
+      - POSTGRES_PASSWORD=Strong@Password1
     ports:
-      - "1433:1433"
+      - "5432:5432"
     volumes:
-      - sqlserver_data:/var/opt/mssql
+      - postgres_data:/var/lib/postgresql/data
+
   backend:
     build:
       context: .
@@ -15,10 +19,10 @@ services:
     ports:
       - "5267:8080"
     depends_on:
-      - sqlserver
+      - postgres
     environment:
-      - DefaultConnection=Server=sqlserver;Database=tropical-express;User Id=sa;Password=Strong@Password1;TrustServerCertificate=True;
+      - ConnectionStrings__DefaultConnection=Host=postgres;Database=tropical-express;Username=postgres;Password=Strong@Password1
       - ASPNETCORE_ENVIRONMENT=Development
 
 volumes:
-  sqlserver_data:
+  postgres_data:
