--- a/TropicalExpress.Tests/TropicalExpress.Tests.csproj
+++ b/TropicalExpress.Tests/TropicalExpress.Tests.csproj
@@ -7,12 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
       <PackageReference Include="xunit" Version="2.9.2" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\TropicalExpress.Domain\TropicalExpress.Domain.csproj" />
+      <ProjectReference Include="..\TropicalExpress.Infrastructure\TropicalExpress.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
