--- a/TropicalExpress.Domain/TropicalExpress.Domain.csproj
+++ b/TropicalExpress.Domain/TropicalExpress.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Ardalis.GuardClauses" Version="5.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.4" />
     </ItemGroup>
 
 </Project>
