--- a/TropicalExpress.Tests/TropicalExpress.Tests.csproj
+++ b/TropicalExpress.Tests/TropicalExpress.Tests.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
       <PackageReference Include="xunit" Version="2.9.2" />
     </ItemGroup>
 
